Adding the 'autoplay' attribute to a media element during a user gesture should remove user gesture restrictions. https://bugs.webkit.org/show_bug.cgi?id=174373

Reviewed by Eric Carlson.

Source/WebCore:

Test: media/video-add-autoplay-user-gesture.html

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::parseAttribute):

LayoutTests:

* media/video-add-autoplay-user-gesture-expected.txt: Added.
* media/video-add-autoplay-user-gesture.html: Added.
* media/platform/ios/TestExpectations: Skipped; requires EventSender.


Canonical link: https://commits.webkit.org/191331@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219509 268f45cc-cd09-0410-ab3c-d52691b4dbfc